# dev-ops

./: Dockerfile  README.md
.github/workflows/: ccpp.yml
cmake/: CMakeLists.txt
docker_test/: Dockerfile
docker_test/cmake/: CMakeLists.txt
docker_test/test/: test.cpp
include/: Deanery.h  Dockerfile  Group.h  Student.h
input_data/: student_input.txt
src/: Deanery.cpp  Group.cpp  Student.cpp  main.cpp
test/: test.cpp
